# TouhouBattleTheatre

./: CMakeLists.txt  README.md  vcpkg.json
TouhouBattleTheatre/: CMakeLists.txt  TODO.md  TouhouBattleTheatre.cpp  TouhouBattleTheatre.h  design.md
TouhouBattleTheatre/res/shader/frag/: basic.frag  box.frag  scrolling.frag  terrain.frag  tiles.frag  unit.frag
TouhouBattleTheatre/res/shader/geom/: box.geom  ray.geom  terrain.geom  tiles.geom  unit.geom
TouhouBattleTheatre/res/shader/vert/: actor.vert  basic.vert  box.vert  ins.vert  ray.vert  scrolling.vert  terrain.vert  tiles.vert  unit.vert
TouhouBattleTheatre/src/: Actor.h  Camera.h  CameraController.h  DebugCameraController.h  EnumFlags.h  Event.h  MapTool.cpp  MapTool.h  OrthoCameraController.h  RTSCameraController.h  Scenario.h  ShaderManager.cpp  ShaderManager.h  Stage.h  Terrain.cpp  Terrain.h  TestApplication.cpp  TestApplication.h  TextureLoader.cpp  TextureLoader.h  TextureManager.h  TileMap.cpp  TileMap.h  WorldMap.cpp  WorldMap.h  stb_image.cpp
TouhouBattleTheatre/src/WorldMap/: Actor.cpp  Actor.h  Cursor.cpp  Cursor.h  Explorer.cpp  Explorer.h  Roamer.h  TileMap.cpp  TileMap.h  Unit.h  UnitManager.cpp  UnitManager.h  UnitRenderer.cpp  UnitRenderer.h  WorldMap.cpp  WorldMap.h  WorldUI.cpp  WorldUI.h  WorldUIItem.cpp  WorldUIItem.h
TouhouBattleTheatre/src/camera/: Camera.h  OrthoCameraController.h  RTSCameraController.h
TouhouBattleTheatre/src/world/: Actor.h  Cursor.cpp  Cursor.h  Explorer.cpp  Explorer.h  TileMap.cpp  TileMap.h  WorldMap.cpp  WorldMap.h  WorldUI.cpp  WorldUI.h  WorldUIItem.cpp  WorldUIItem.h
